<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_dialog_round"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:orientation="vertical"
        android:weightSum="12"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@drawable/bg_layout_round_enabled">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:weightSum="10">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/alarm_dialog_title_text"
                android:textSize="@dimen/sp_base_m2" />

            <EditText
                android:id="@+id/edit_text_alarm_dialog_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/alarm_dialog_time_text"
                android:textSize="@dimen/sp_base_m2" />

            <TimePicker
                android:id="@+id/time_picker_alarm_dialog"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:weightSum="1"
                android:layout_gravity="center_vertical"
                android:descendantFocusability="blocksDescendants"
                android:timePickerMode="spinner"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/alarm_dialog_range_text"
                android:textSize="@dimen/sp_base_m2" />

            <NumberPicker
                android:id="@+id/number_picker_alarm_dialog_range"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:weightSum="1"
                android:layout_gravity="center_vertical"
                android:background="@drawable/bg_numberpicker_divider"
                android:descendantFocusability="blocksDescendants"
                android:selectionDividerHeight="0dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/alarm_dialog_cost_text"
                android:textSize="@dimen/sp_base_m2" />


            <NumberPicker
                android:id="@+id/number_picker_alarm_dialog_cost"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:weightSum="1"
                android:layout_gravity="center_vertical"
                android:background="@drawable/bg_numberpicker_divider"
                android:descendantFocusability="blocksDescendants"
                android:selectionDividerHeight="0dp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_alarm_dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_round"
            android:text="@string/base_btn_cancel"
            android:textColor="@color/color_text_btn"
            android:textSize="@dimen/sp_btn_mid" />

        <Button
            android:id="@+id/btn_alarm_dialog_add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_round"
            android:text="@string/base_btn_add"
            android:textColor="@color/color_text_btn"
            android:textSize="@dimen/sp_btn_mid" />
    </LinearLayout>
</LinearLayout>
