<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_dialog_round"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="8"
        android:gravity="bottom">

        <ImageView
            android:id="@+id/image_view_record_dialog_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_type_timer"/>

        <TextView
            android:id="@+id/text_view_record_dialog_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="7"
            android:textSize="18sp"
            android:text="#1 Title"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical"
        android:weightSum="8"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@drawable/bg_layout_round_enabled">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:text="@string/record_dialog_start_time_text"
            android:textSize="@dimen/sp_base_m2" />

        <TimePicker
            android:id="@+id/time_picker_record_dialog"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:weightSum="1"
            android:layout_gravity="center_vertical"
            android:descendantFocusability="blocksDescendants"
            android:timePickerMode="spinner"/>

        <TextView
            android:id="@+id/text_view_record_dialog_term_label"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:text="@string/record_dialog_term_text"
            android:textSize="@dimen/sp_base_m2" />

        <NumberPicker
            android:id="@+id/number_picker_record_dialog_term"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:weightSum="1"
            android:layout_gravity="center_vertical"
            android:background="@drawable/bg_numberpicker_divider"
            android:descendantFocusability="blocksDescendants"
            android:selectionDividerHeight="0dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_record_dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_round"
            android:text="@string/base_btn_cancel"
            android:textColor="@color/color_text_btn"
            android:textSize="@dimen/sp_btn_mid" />

        <Button
            android:id="@+id/btn_record_dialog_add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_round"
            android:text="@string/base_btn_add"
            android:textColor="@color/color_text_btn"
            android:textSize="@dimen/sp_btn_mid" />
    </LinearLayout>
</LinearLayout>
